[gd_scene load_steps=2 format=3 uid="uid://ybrko55rn3fe"]

[ext_resource type="Script" uid="uid://gi58jbh8t1rn" path="res://inventory.gd" id="1_pohso"]

[node name="Inventory" type="ColorRect"]
offset_left = 64.0
offset_top = 320.0
offset_right = 1016.0
offset_bottom = 576.0
color = Color(1, 1, 1, 0.81960785)
script = ExtResource("1_pohso")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 83.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Inventory"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 8.0
offset_right = 946.0
offset_bottom = 39.0
text = "Close"

[node name="WorkerCost" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 64.0
offset_right = 210.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="WorkerCount" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 65.0
offset_right = 338.0
offset_bottom = 88.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 39.0
offset_right = 220.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cost"

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 40.0
offset_right = 348.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Quantity"

[node name="WorkerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 64.0
offset_right = 130.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Worker"

[node name="WorkerBuyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 62.0
offset_right = 264.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 14
text = "Buy"

[node name="BudgetTimer" type="Timer" parent="."]
autostart = true

[node name="DispatchButton" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 208.0
offset_right = 508.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 14
disabled = true
text = "Dispatch"

[node name="DispatchLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 39.0
offset_right = 508.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dispatch"

[node name="DispatchWorkerCount" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 64.0
offset_right = 498.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="TransferWorkerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 62.0
offset_right = 416.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 14
disabled = true
text = ">"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="WorkerBuyButton" to="." method="_on_worker_buy_button_pressed"]
[connection signal="timeout" from="BudgetTimer" to="." method="_on_budget_timer_timeout"]
[connection signal="pressed" from="DispatchButton" to="." method="_on_dispatch_button_pressed"]
[connection signal="pressed" from="TransferWorkerButton" to="." method="_on_transfer_worker_button_pressed"]
